tests/snapshots/snapshot_integration__d2__compound_with_comments.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "int x = 0;"
D8: "x = x + 1;"
D10: "return x;"
D8 -> D10
D4 -> D8
D10 -> D1
D0 -> D4
