tests/snapshots/snapshot_integration__d2__enum_class_switch.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "State state = State::Work;"
D6: "int v = 0;"
D11: "(state) == State::Init"
D11.shape: diamond
D12: "(state) == State::Work"
D12.shape: diamond
D17: "v = 1;"
D19: "break"
D21: "v = 2;"
D23: "break"
D25: "v = 3;"
D27: "return v;"
D4 -> D6
D6 -> D11
D23 -> D27
D21 -> D23
D25 -> D27
D11 -> D12: N
D19 -> D27
D17 -> D19
D12 -> D21: Y
D12 -> D25: N
D11 -> D17: Y
D27 -> D1
D0 -> D4
