tests/snapshots/snapshot_integration__d2__for_loop.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "int sum = 0;"
D8: "i < 3"
D8.shape: diamond
D9: "int i = 0;"
D10: "i++"
D13: "sum += i;"
D15: "return sum;"
D4 -> D9
D8 -> D15: N
D9 -> D8
D13 -> D10
D10 -> D8
D8 -> D13: Y
D15 -> D1
D0 -> D4
