tests/snapshots/snapshot_integration__d2__for_missing_init_cond_upd.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "int k = 0;"
D8: "true"
D8.shape: diamond
D13: "k++;"
D15: "(k > 2)"
D15.shape: diamond
D20: "break"
D22: "return k;"
D15 -> D8: N
D20 -> D22
D8 -> D22: N
D13 -> D15
D15 -> D20: Y
D4 -> D8
D8 -> D13: Y
D22 -> D1
D0 -> D4
